TS-949: fix key->vol hash to be consistent when a disk is marked as bad.

git-svn-id: https://svn.apache.org/repos/asf/trafficserver/traffic/trunk@1214409 13f79535-47bb-0310-9956-ffa450edef68